--- a/yf/Dockerfile
+++ b/yf/Dockerfile
@@ -93,14 +93,14 @@ RUN HTTP_PROXY=${APT_PROXY} HTTPS_PROXY=${APT_PROXY} \
     rm -rf "super_mediator-${SM_VERSION}" sm.tar.gz
 
 # ================================
-# 2. 运行阶段：精简运行环境 + flow2ftp + 启动脚本
+# 2. 运行阶段：精简运行环境 + flow2ftp + 排查工具 + supervisor
 # ================================
 
 FROM debian:bookworm-slim AS runtime
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# 配置阿里云源，安装运行时依赖（bash + 基础库）
+# 配置阿里云源，安装运行时依赖 + 排查工具 + supervisor + 时区
 RUN set -eux; \
     rm -f /etc/apt/sources.list.d/debian.sources || true; \
     echo "deb http://mirrors.aliyun.com/debian bookworm main contrib non-free non-free-firmware" > /etc/apt/sources.list; \
@@ -116,8 +116,27 @@ RUN set -eux; \
         libssl3 \
         liblua5.3-0 \
         bash \
+        # --- 排查工具 ---
+        procps \ 
+        tcpdump \
+        netcat-traditional \
+        iproute2 \
+        net-tools \
+        dnsutils \
+        psmisc \
+        vim-tiny \
+        less \
+        # --- supervisor + 时区 ---
+        supervisor \
+        tzdata \
     ; \
+    # 设置时区为 Asia/Shanghai（东八区）
+    ln -fs /usr/share/zoneinfo/Asia/Shanghai /etc/localtime; \
+    echo "Asia/Shanghai" > /etc/timezone; \
+    dpkg-reconfigure -f noninteractive tzdata; \
     rm -rf /var/lib/apt/lists/*
+
+ENV TZ=Asia/Shanghai
 
 # 拷贝 builder 安装好的 libfixbuf + yaf + super_mediator
 COPY --from=builder /usr/local/ /usr/local/
@@ -143,83 +162,148 @@ RUN mkdir -p /data
 # 准备 YAF 配置目录
 RUN mkdir -p /etc/yaf
 
-# 写入口脚本：YAF --config + super_mediator(TEXT) + flow2ftp(FTP 上传)
-RUN cat >/entrypoint.sh <<'EOF'
-#!/usr/bin/env bash
+# supervisor 日志目录
+RUN mkdir -p /var/log/supervisor /var/run/supervisor
 
+# 创建非 root 用户（抓网卡时 docker run 加 cap）
+RUN useradd -r -s /usr/sbin/nologin yaf && \
+    chown -R yaf:yaf /data /etc/yaf /var/log/supervisor /var/run/supervisor
+
+# ================================
+# 2.1 启动脚本：yaf 和 pipeline 分开，交给 supervisor 管理
+# ================================
+
+# 启动 YAF 的脚本
+RUN cat >/usr/local/bin/start_yaf.sh <<'EOF'
+#!/usr/bin/env bash
 set -euo pipefail
 
-# =========================
-# YAF / super_mediator 相关
-# =========================
-
-# YAF 官方配置文件路径（必须存在）
 YAF_CONFIG_FILE="${YAF_CONFIG_FILE:-/etc/yaf/yaf.init}"
 
-# super_mediator 监听端口（要和 YAF 配置中的 output.port 对应）
-SM_LISTEN_PORT="${SM_LISTEN_PORT:-18000}"
+echo "[start_yaf] 使用 YAF 配置文件: ${YAF_CONFIG_FILE}"
 
-# TEXT 输出字段列表（flow2ftp 不关心字段含义，只当 CSV 文本）
-SM_FIELDS="${SM_FIELDS:-flowStartMilliseconds,flowEndMilliseconds,sourceIPv4Address,destinationIPv4Address,sourceTransportPort,destinationTransportPort,protocolIdentifier,silkAppLabel}"
-
-echo "[entrypoint] 使用 YAF 配置文件: ${YAF_CONFIG_FILE}"
-echo "[entrypoint] super_mediator 监听端口: ${SM_LISTEN_PORT}"
-echo "[entrypoint] TEXT 输出字段: ${SM_FIELDS}"
-
-# 检查 YAF 配置文件是否存在
 if [ ! -f "${YAF_CONFIG_FILE}" ]; then
-  echo "[entrypoint] ERROR: 未找到 YAF 配置文件: ${YAF_CONFIG_FILE}" >&2
-  echo "[entrypoint] 请在 docker run 时用 -v 挂载，例如：" >&2
+  echo "[start_yaf] ERROR: 未找到 YAF 配置文件: ${YAF_CONFIG_FILE}" >&2
+  echo "[start_yaf] 请在 docker run 时用 -v 挂载，例如：" >&2
   echo "  -v /path/on/host/yaf.init:/etc/yaf/yaf.init:ro" >&2
   exit 1
 fi
 
-# =========================
-# 启动 pipeline: super_mediator(TEXT) | flow2ftp(滚动写文件 + 定时 FTP 上传)
-# flow2ftp 所有参数从 YAF_CONFIG_FILE 中的 flow2ftp 配置块读取
-# =========================
-
-super_mediator \
-  --ipfix-input=tcp \
-  --ipfix-port="${SM_LISTEN_PORT}" \
-  --output-mode=TEXT \
-  --print-headers \
-  --out=- \
-  --fields="${SM_FIELDS}" \
-  localhost \
-  | /usr/local/bin/flow2ftp -config "${YAF_CONFIG_FILE}" -data-dir "/data" &
-
-SM_PIPE_PID=$!
-
-echo "[entrypoint] super_mediator + flow2ftp pipeline 已启动 (PID=${SM_PIPE_PID})"
-
-# =========================
-# 启动 YAF（官方 --config yaf.init）
-# =========================
-
-yaf --config "${YAF_CONFIG_FILE}" "$@" &
-
-YAF_PID=$!
-
-echo "[entrypoint] YAF 已启动 (PID=${YAF_PID})，配置文件: ${YAF_CONFIG_FILE}"
-
-# =========================
-# 等 pipeline 退出，容器随之退出
-# =========================
-
-wait "${SM_PIPE_PID}"
+# 直接 exec，保证进程 PID 由 supervisor 管控
+exec yaf --config "${YAF_CONFIG_FILE}" "$@"
 EOF
 
-RUN chmod +x /entrypoint.sh
+# 启动 super_mediator(TEXT) | flow2ftp 的脚本
+RUN cat >/usr/local/bin/start_pipeline.sh <<'EOF'
+#!/usr/bin/env bash
+set -euo pipefail
 
-RUN sed -i 's/\r$//' /entrypoint.sh || true
+YAF_CONFIG_FILE="${YAF_CONFIG_FILE:-/etc/yaf/yaf.init}"
+SM_LISTEN_PORT="${SM_LISTEN_PORT:-18000}"
+SM_FIELDS="${SM_FIELDS:-flowStartMilliseconds,flowEndMilliseconds,sourceIPv4Address,destinationIPv4Address,sourceTransportPort,destinationTransportPort,protocolIdentifier,silkAppLabel}"
 
-# 非 root 用户（抓网卡时 docker run 加 cap）
-RUN useradd -r -s /usr/sbin/nologin yaf
+echo "[start_pipeline] 使用 YAF 配置文件: ${YAF_CONFIG_FILE}"
+echo "[start_pipeline] super_mediator 监听端口: ${SM_LISTEN_PORT}"
+echo "[start_pipeline] TEXT 输出字段: ${SM_FIELDS}"
 
+if [ ! -f "${YAF_CONFIG_FILE}" ]; then
+  echo "[start_pipeline] ERROR: 未找到 YAF 配置文件: ${YAF_CONFIG_FILE}" >&2
+  echo "[start_pipeline] 请在 docker run 时用 -v 挂载，例如：" >&2
+  echo "  -v /path/on/host/yaf.init:/etc/yaf/yaf.init:ro" >&2
+  exit 1
+fi
+
+# pipeline:
+#   super_mediator(TEXT) --> stdout
+#   flow2ftp 读取 TEXT，按配置滚动写文件并定时上传 FTP
+exec bash -c "
+  super_mediator \
+    --ipfix-input=tcp \
+    --ipfix-port=\"${SM_LISTEN_PORT}\" \
+    --output-mode=TEXT \
+    --print-headers \
+    --out=- \
+    --fields=\"${SM_FIELDS}\" \
+    localhost \
+  | /usr/local/bin/flow2ftp -config \"${YAF_CONFIG_FILE}\" -data-dir \"/data\"
+"
+EOF
+
+RUN chmod +x /usr/local/bin/start_yaf.sh /usr/local/bin/start_pipeline.sh
+
+# ================================
+# 2.2 supervisor 配置：高可用 + 日志滚动 + 日志统一收集
+# ================================
+
+# 生成 supervisor 主配置文件
+RUN cat >/etc/supervisor/supervisord.conf <<'EOF'
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0700
+
+[supervisord]
+logfile=/var/log/supervisor/supervisord.log
+logfile_maxbytes=50MB
+logfile_backups=5
+pidfile=/var/run/supervisord.pid
+nodaemon=true
+minfds=10240
+minprocs=200
+childlogdir=/var/log/supervisor
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
+; ------------------------------
+; YAF 进程，由 supervisor 管理
+; ------------------------------
+[program:yaf]
+command=/usr/local/bin/start_yaf.sh
+autorestart=true
+startsecs=3
+startretries=5
+stopasgroup=true
+killasgroup=true
+
+; 所有 stdout/stderr 日志都写到同一个文件，并做滚动
+stdout_logfile=/var/log/supervisor/supervisord.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/supervisord.log
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups=5
+
+; ------------------------------
+; pipeline 进程：super_mediator | flow2ftp
+; ------------------------------
+[program:pipeline]
+command=/usr/local/bin/start_pipeline.sh
+autorestart=true
+startsecs=3
+startretries=5
+stopasgroup=true
+killasgroup=true
+
+stdout_logfile=/var/log/supervisor/supervisord.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/supervisord.log
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups=5
+EOF
+
+# 确保脚本没有 Windows 换行符
+RUN sed -i 's/\r$//' /usr/local/bin/start_yaf.sh /usr/local/bin/start_pipeline.sh /etc/supervisor/supervisord.conf || true
+
+# 最终以非 root 用户运行（抓包时需要 docker run 加能力）
 USER yaf
 
-ENTRYPOINT ["/entrypoint.sh"]
+WORKDIR /
+
+# 使用 supervisor 作为唯一入口（A 方案）
+ENTRYPOINT ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
 
 CMD []
-
